php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27354 Modulus operator crashes PHP
Submitted: 2004-02-22 14:25 UTC Modified: 2004-02-22 14:59 UTC
From: tomas dot matousek at matfyz dot cz Assigned: derick (profile)
Status: Closed Package: Reproducible crash
PHP Version: Irrelevant OS: WinXP
Private report: No CVE-ID: None
 [2004-02-22 14:25 UTC] tomas dot matousek at matfyz dot cz
Description:
------------
Using modulus operator on particular numbers leads to PHP  crash.

Reproduce code:
---------------
var_dump((-2147483648) % (-1));


Expected result:
----------------
0

Actual result:
--------------
CRASH


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-22 14:35 UTC] derick@php.net
Also gives a floating point error on linux; will fix.
 [2004-02-22 14:59 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 03:00:01 2026 UTC