- Fixed bug #27354 (Modulus operator crashes PHP).