Zend/zend_operators.c
@@ -836,6 +836,11 @@ ZEND_API int mod_function(zval *result, zval *op1, zval *op2 TSRMLS_DC)
 		return FAILURE;			/* modulus by zero */
 	}
 
+	if (abs(op2->value.lval) == 1) {
+		ZVAL_LONG(result, 0);
+		return SUCCESS;
+	}
+
 	result->type = IS_LONG;
 	result->value.lval = op1->value.lval % op2->value.lval;
 	return SUCCESS;
